# rl_gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml
caffe/network/: drl_gazebo.prototxt  drl_gazebo_solver.prototxt  lenet_solver.prototxt  lenet_train.prototxt  nfq_gazebo.prototxt  nfq_gazebo_solver.prototxt
caffe/scripts/: compute_mean.sh  convert_images.sh  convert_policy.py  train.sh  train_lenet.sh
gazebo/models/box_obstacle/: model.config  model.sdf
gazebo/models/drl_rover/: model.config  model.sdf
gazebo/models/rover/: model.config  model.sdf
gazebo/models/walls/: model.config  model.sdf
gazebo/worlds/: drl_rover.world  nfq_rover.world  rover.world
models/drl_rover/: model.config  model.sdf
models/rover/: model.sdf
src/: CMakeLists.txt  CaffeInference.cpp  CaffeInference.hpp  CaffeRL.cpp  CaffeRL.hpp  CarinaPlugin.cpp  CarinaPlugin.hpp  DRLPlugin.cpp  DRLPlugin.hpp  NFQPlugin.cpp  NFQPlugin.hpp  QLearner.cpp  QLearner.hpp  RosRoverPlugin.cpp  RosRoverPlugin.hpp  RoverModel.cpp  RoverModel.hpp  RoverPlugin.cpp  RoverPlugin.hpp  State.cpp  State.hpp  carina_plugin.proto
worlds/: drl_rover.world  rover.world
