<package>
    <name>drl_gazebo</name>
    <version>0.1.0</version>
    <description>Package to simulate an autonomous vehicle</description>

    <author>Thomio Watanabe</author>
    <maintainer email="thomio.watanabe@usp.br">Thomio Watanabe</maintainer>

    <license>GNU GPL v2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
</package>
